Fix z-index Menú - Optimización de animación de Tipos

--- a/src/styles/Index/Menu.sass
+++ b/src/styles/Index/Menu.sass
@@ -6,6 +6,7 @@
     display: flex
     justify-content: center
     background-color: $color-negro-azulado
+    z-index: 10
     .menu
         display: flex
         justify-content: space-between
